--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
         "php": ">=7.3",
-        "ajt/guzzle-toggl": "^1.0",
+        "ajt/guzzle-toggl": "^1.0"
+    },
+    "require-dev": {
         "vlucas/phpdotenv": "^4.1"
     }
 }
