--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "php": ">=7.3",
-        "ajt/guzzle-toggl": "^1.0"
+        "ajt/guzzle-toggl": "dev-master"
     },
     "require-dev": {
         "vlucas/phpdotenv": "^4.1"
