--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Reckoning",
+  "name": "wreckoning",
   "description": "Simple tool for calculating the amount of work left to do",
-  "repository": "https://github.com/akhumphrey/reckoning",
+  "repository": "https://github.com/akhumphrey/wreckoning",
   "addons": []
 }
